# rita-dsl

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: github-actions-deployment.yaml  github-actions-main.yaml
benchmarks/: LastResults.md  reviews-subset.csv
changes/: 101.feature.rst  102.feature.rst  103.feature.rst  105.feature.rst  109.feature.rst  110.feature.rst  114.feature.rst  116.feature.rst  118.feature.rst  32.feature.md  35.fix.md  38.feature.rst  40.fix.rst  42.feature.rst  46.fix.rst  47.feature.rst  50.fix.rst  51.feature.rst  53.feature.rst  55.feature.rst  59.fix.rst  62.fix.rst  64.feature.rst  66.feature.rst  71.fix.rst  72.fix.rst  75.fix.rst  77.fix.rst  80.fix.rst  81.feature.rst  82.feature.rst  84.feature.rst  86.feature.rst  87.feature.rst  88.fix.rst  90.fix.rst  91.fix.rst  92.fix.rst  93.feature.rst  94.fix.rst  (+2 more)
docs/: advanced.md  config.md  engines.md  extend.md  index.md  integration.md  macros.md  modules.md  quickstart.md  syntax.md
examples/: .#cyclical-import-a.rita  cars.txt  cheap-phones.rita  color-car.rita  complex-number.rita  cyclical-import.rita  excluding-word.rita  fuzzy-matching.rita  match-with-escaped-string.rita  simple-import.rita  simple-match.rita
extra/sublimetext/: RITA.sublime-syntax
requirements/: main.txt  test.txt
rita/: __init__.py  config.py  lexer.py  macros.py  parser.py  precompile.py  preprocess.py  run.py  shortcuts.py  translate.py  types.py  utils.py
rita/engine/: __init__.py  translate_rust.py  translate_spacy.py  translate_standalone.py
rita/modules/: fuzzy.py  names.py  orth.py  pluralize.py  regex.py  tag.py
templates/: changes.md
tests/: test_config.py  test_examples.py  test_init.py  test_lexer.py  test_macros.py  test_modules.py  test_parser.py  test_precompile.py  test_rules.py  test_run.py  test_translate_spacy.py  test_utils.py  utils.py
