[tool.poetry]
name = "rita-dsl"
version = "0.6.11"
description = "DSL for building language rules"
authors = [
    "Šarūnas Navickas <zaibacu@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zaibacu/rita-dsl"
repository = "https://github.com/zaibacu/rita-dsl"
documentation = "https://rita-dsl.readthedocs.io/en/latest/"
packages = [{ include = "rita" }]

keywords = ["nlp", "rule-based", "dsl", "pyproject.toml"]

classifiers = [
            "Programming Language :: Python",
            "Programming Language :: Python :: 3",
            "Programming Language :: Python :: 3.5",
            "Programming Language :: Python :: 3.6",
            "Programming Language :: Python :: 3.7",
            "Programming Language :: Python :: 3.8",
            "Programming Language :: Python :: Implementation :: CPython",
            "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.5"
ply = "3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2.4"
pytest-benchmark = "^3.2.2"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"

[tool.poetry.scripts]
rita = "rita.run:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.towncrier]
directory = "changes"
package = "rita"
filename = "CHANGELOG.md"
underlines = ["*", "-"]
template = "changes_template.md"
title_format = "{name} {version} ({project_date})"

[[tool.towncrier.type]]
directory = "breaking"
name = "Backward-incompatible Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Fix"
showcontent = true