[project]
name = "rita-dsl"
version = "0.7.4"
description = "DSL for building language rules"
authors = [
    { name = "Šarūnas Navickas", email = "sarunas@navickas.info" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nlp", "rule-based", "dsl"]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "ply==3.11",
]

[project.urls]
Homepage = "https://github.com/zaibacu/rita-dsl"
Repository = "https://github.com/zaibacu/rita-dsl"
Documentation = "https://rita-dsl.readthedocs.io/en/latest/"

[project.scripts]
rita = "rita.run:main"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-benchmark>=4",
    "pytest-cov>=4",
    "pytest-mock>=3",
    "flake8",
    "mypy",
    "inflect",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rita"]

[tool.towncrier]
directory = "changes"
package = "rita"
filename = "CHANGELOG.md"
underlines = ["*", "-"]
template = "changes_template.md"
title_format = "{name} {version} ({project_date})"

[[tool.towncrier.type]]
directory = "breaking"
name = "Backward-incompatible Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Fix"
showcontent = true
